v10/docs/ModelsReportParameters.md
# ModelsReportParameters

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int64** |  | [optional] 
**ParameterName** | Pointer to **string** |  | [optional] 
**ParameterType** | Pointer to **int64** |  | [optional] 
**DisplayName** | Pointer to **string** |  | [optional] 
**Description** | Pointer to **string** |  | [optional] 
**DefaultValue** | Pointer to **string** |  | [optional] 
**DisplayOrder** | Pointer to **int64** |  | [optional] 
**ParameterVisibility** | Pointer to **int64** |  | [optional] 

## Methods

### NewModelsReportParameters

`func NewModelsReportParameters() *ModelsReportParameters`

NewModelsReportParameters instantiates a new ModelsReportParameters object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsReportParametersWithDefaults

`func NewModelsReportParametersWithDefaults() *ModelsReportParameters`

NewModelsReportParametersWithDefaults instantiates a new ModelsReportParameters object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsReportParameters) GetId() int64`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsReportParameters) GetIdOk() (*int64, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsReportParameters) SetId(v int64)`

SetId sets Id field to given value.

### HasId

`func (o *ModelsReportParameters) HasId() bool`

HasId returns a boolean if a field has been set.

### GetParameterName

`func (o *ModelsReportParameters) GetParameterName() string`

GetParameterName returns the ParameterName field if non-nil, zero value otherwise.

### GetParameterNameOk

`func (o *ModelsReportParameters) GetParameterNameOk() (*string, bool)`

GetParameterNameOk returns a tuple with the ParameterName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetParameterName

`func (o *ModelsReportParameters) SetParameterName(v string)`

SetParameterName sets ParameterName field to given value.

### HasParameterName

`func (o *ModelsReportParameters) HasParameterName() bool`

HasParameterName returns a boolean if a field has been set.

### GetParameterType

`func (o *ModelsReportParameters) GetParameterType() int64`

GetParameterType returns the ParameterType field if non-nil, zero value otherwise.

### GetParameterTypeOk

`func (o *ModelsReportParameters) GetParameterTypeOk() (*int64, bool)`

GetParameterTypeOk returns a tuple with the ParameterType field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetParameterType

`func (o *ModelsReportParameters) SetParameterType(v int64)`

SetParameterType sets ParameterType field to given value.

### HasParameterType

`func (o *ModelsReportParameters) HasParameterType() bool`

HasParameterType returns a boolean if a field has been set.

### GetDisplayName

`func (o *ModelsReportParameters) GetDisplayName() string`

GetDisplayName returns the DisplayName field if non-nil, zero value otherwise.

### GetDisplayNameOk

`func (o *ModelsReportParameters) GetDisplayNameOk() (*string, bool)`

GetDisplayNameOk returns a tuple with the DisplayName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDisplayName

`func (o *ModelsReportParameters) SetDisplayName(v string)`

SetDisplayName sets DisplayName field to given value.

### HasDisplayName

`func (o *ModelsReportParameters) HasDisplayName() bool`

HasDisplayName returns a boolean if a field has been set.

### GetDescription

`func (o *ModelsReportParameters) GetDescription() string`

GetDescription returns the Description field if non-nil, zero value otherwise.

### GetDescriptionOk

`func (o *ModelsReportParameters) GetDescriptionOk() (*string, bool)`

GetDescriptionOk returns a tuple with the Description field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDescription

`func (o *ModelsReportParameters) SetDescription(v string)`

SetDescription sets Description field to given value.

### HasDescription

`func (o *ModelsReportParameters) HasDescription() bool`

HasDescription returns a boolean if a field has been set.

### GetDefaultValue

`func (o *ModelsReportParameters) GetDefaultValue() string`

GetDefaultValue returns the DefaultValue field if non-nil, zero value otherwise.

### GetDefaultValueOk

`func (o *ModelsReportParameters) GetDefaultValueOk() (*string, bool)`

GetDefaultValueOk returns a tuple with the DefaultValue field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDefaultValue

`func (o *ModelsReportParameters) SetDefaultValue(v string)`

SetDefaultValue sets DefaultValue field to given value.

### HasDefaultValue

`func (o *ModelsReportParameters) HasDefaultValue() bool`

HasDefaultValue returns a boolean if a field has been set.

### GetDisplayOrder

`func (o *ModelsReportParameters) GetDisplayOrder() int64`

GetDisplayOrder returns the DisplayOrder field if non-nil, zero value otherwise.

### GetDisplayOrderOk

`func (o *ModelsReportParameters) GetDisplayOrderOk() (*int64, bool)`

GetDisplayOrderOk returns a tuple with the DisplayOrder field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDisplayOrder

`func (o *ModelsReportParameters) SetDisplayOrder(v int64)`

SetDisplayOrder sets DisplayOrder field to given value.

### HasDisplayOrder

`func (o *ModelsReportParameters) HasDisplayOrder() bool`

HasDisplayOrder returns a boolean if a field has been set.

### GetParameterVisibility

`func (o *ModelsReportParameters) GetParameterVisibility() int64`

GetParameterVisibility returns the ParameterVisibility field if non-nil, zero value otherwise.

### GetParameterVisibilityOk

`func (o *ModelsReportParameters) GetParameterVisibilityOk() (*int64, bool)`

GetParameterVisibilityOk returns a tuple with the ParameterVisibility field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetParameterVisibility

`func (o *ModelsReportParameters) SetParameterVisibility(v int64)`

SetParameterVisibility sets ParameterVisibility field to given value.

### HasParameterVisibility

`func (o *ModelsReportParameters) HasParameterVisibility() bool`

HasParameterVisibility returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


